feat: enhance country and pet suggestion services with caching and filtering improvements